@@ -6,7 +6,6 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.employee_api.springboot_bootcamp.variables.Authority.ADMIN;
 
@@ -20,6 +19,6 @@ public class SkillService {
     @Transactional
     @PreAuthorize(ADMIN)
     public List<SkillDTO> getAll() {
-        return skillRepository.findAll().stream().map(skillMapper::mapToDto).collect(Collectors.toList());
+        return skillRepository.findAll().stream().map(skillMapper::mapToDto).toList();
     }
 }
